hphp/test/slow/traits/fatal_missing_trait.php.expectf

Fatal error: Unknown trait 'T' in %s/test/slow/traits/fatal_missing_trait-class.inc on line 3
